manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-frontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-frontend-deployment
  template:
    metadata:
      labels:
        app: sample-frontend-deployment
    spec:
      containers:
        - name: sample-frontend-container
          image: sample-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
