manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-backend-service
spec:
  selector:
    app: sample
  ports:
    - name: sample-backend-port
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
