manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-frontend-service
spec:
  selector:
    app: sample
  ports:
    - name: sample-frontend-port
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
